# os-labs

./: .gitignore
.github/workflows/: c-cpp.yml
ch1/mod/: .gitignore  Makefile  build  simple.c
ch1/syscall/: .config
ch1/syscall/arch/x86/entry/syscalls/arch/x86/entry/syscalls/: syscall_64.tbl
ch1/syscall/kernel/: sys.c
ch2/hwsh/: .gitignore  Makefile  README.md  configure.ac
ch2/hwsh/include/: analyzer.h  exec.h  getcmd.h  global.h  hist.h  stack.h
ch2/hwsh/src/: Makefile  Makefile.am  analyzer.c  exec.c  getcmd.c  hist.c  main.c  stack.c
ch2/hwsh/test/: Makefile.am  check_analyzer.c  check_exec.c
ch3/: .Module.symvers.cmd  .modules.order.cmd  .task_dfs.ko.cmd  .task_dfs.mod.cmd  .task_dfs.mod.o.cmd  .task_dfs.o.cmd  .task_list.ko.cmd  .task_list.mod.cmd  .task_list.mod.o.cmd  .task_list.o.cmd  Makefile  modules.order  task_dfs.c  task_dfs.ko  task_dfs.mod  task_dfs.mod.c  task_list.c  task_list.ko  task_list.mod  task_list.mod.c
